--- a/CuidooApp/Mom/Storyboards/Request.storyboard
+++ b/CuidooApp/Mom/Storyboards/Request.storyboard
@@ -44,10 +44,10 @@
                                 </connections>
                             </button>
                             <scrollView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8N-PZ-850">
-                                <rect key="frame" x="16" y="60" width="382" height="688"/>
+                                <rect key="frame" x="16" y="104" width="382" height="644"/>
                                 <subviews>
                                     <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KYG-Th-P9N" customClass="BabySitterInfosView" customModule="CuidooApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="382" height="688"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="644"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dds-w5-unG">
                                                 <rect key="frame" x="8" y="8" width="366" height="680"/>
@@ -92,7 +92,11 @@
                     </view>
                     <navigationItem key="navigationItem" title="Confirmar cuidadora" id="kLC-YT-Yl5">
                         <barButtonItem key="backBarButtonItem" title="Cancelar" id="IK9-lk-WIV"/>
+                        <barButtonItem key="leftBarButtonItem" title="Cancelar" id="eVc-uf-83Y">
+                            <color key="tintColor" red="1" green="0.35686274509999999" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="babySitterView" destination="KYG-Th-P9N" id="Hgm-bc-0ge"/>
                         <outlet property="confirm" destination="GbP-8m-rRx" id="nRQ-0p-1tk"/>
